--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </header>
             <div class="container">
                 <div class="hero-pic" data-aos="zoom-in">
-                    <img src="images/pfp.jpg" alt="profile pic">
+                    <img src="pfp.jpg" alt="profile pic">
                 </div>
                 <div class="hero-text" data-aos="fade-up">
                     <h5>Hi I am a <span class="input">Frontend Developer</span></h5>
